@@ -10,6 +10,9 @@ base-installer (1.18) UNRELEASED; urgency=low
       thereby silencing warnings from code that chroots into /target before
       prebaseconfig runs.
     - Use C-style comments in run-debootstrap.
+    - List both starting and ending percentages for waypoints, in order to
+      be able to support multiple paths in the event of changes to
+      debootstrap.
   * Joey Hess
     - Call archdetect command instead of using template to get subarch.
 
